--- a/src/app/shared/components/modal/subscribe-user-modal/subscribe-user-modal.component.html
+++ b/src/app/shared/components/modal/subscribe-user-modal/subscribe-user-modal.component.html
@@ -1,6 +1,8 @@
 <div class="flex flex-col gap-y-5 p-5">
   <div class="flex items-center justify-between">
-    <div class="text-xl text-gray-500">Добавить подписку к {{ company.name }}</div>
+    <div class="text-xl text-gray-500">
+      Добавить подписку к {{ user.userInfo.firstName }} {{ user.userInfo.lastName }}
+    </div>
 
     <lucide-icon
       [className]="'cursor-pointer hover:text-gray-600'"
@@ -43,7 +45,7 @@
         type="submit"
         (click)="onSubmit()"
         class="px-4 py-2 flex gap-x-2.5 items-center text-sm font-medium text-white bg-blue-600 rounded-md hover:bg-blue-700 focus:outline-none"
-        [ngClass]="{'opacity-50': subForm.invalid}"
+        [ngClass]="{ 'opacity-50': subForm.invalid }"
       >
         @if(loading) {
           <app-spin-process></app-spin-process>
