--- a/src/app/views/companies/components/companies-details/companies-details.component.html
+++ b/src/app/views/companies/components/companies-details/companies-details.component.html
@@ -54,6 +54,7 @@
 
   @if(id) {
     <app-companies-users
+      [company]="organization"
       [companyId]="id"
       class="pt-5 border-t"
     ></app-companies-users>
