--- a/src/app/shared/components/modal/company-modal/company-modal.component.html
+++ b/src/app/shared/components/modal/company-modal/company-modal.component.html
@@ -21,7 +21,7 @@
     </div>
 
     <div>
-      <p class="text-sm font-medium text-gray-500">ИНН</p>
+      <p class="text-sm font-medium text-gray-500">Телефон</p>
       <p class="text-gray-800">{{company.phoneNumber}}</p>
     </div>
 
