--- a/src/app/views/companies/components/companies-details/companies-details.component.html
+++ b/src/app/views/companies/components/companies-details/companies-details.component.html
@@ -36,7 +36,7 @@
     </div>
 
     <div>
-      <p class="text-sm font-medium text-gray-500">ИНН</p>
+      <p class="text-sm font-medium text-gray-500">Телефон</p>
       <p class="text-gray-800">{{organization?.phoneNumber}}</p>
     </div>
 
