fix: add header usernames

--- a/src/app/core/components/header-nav/header-nav.component.html
+++ b/src/app/core/components/header-nav/header-nav.component.html
@@ -1,7 +1,16 @@
 <div class="flex gap-x-[30px] items-center h-full text-gray-900">
   <div class="flex flex-col">
     <div class="h-[24px] font-[600] leading-6">
-      {{ userDetail?.email }}
+      @if(userDetail) {
+        <span>
+          @if(userDetail.companyUserResponse) {
+            <span>{{ userDetail.companyUserResponse.company.name + ' - ' }}</span>
+          }
+          @if(userDetail.userResponse) {
+            {{ userDetail.userResponse.firstName }} {{ userDetail.userResponse.lastName }}
+          }
+        </span>
+      }
     </div>
   </div>
 
